I forget what exactly I added lol

--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,26 @@
 body {
-  font-family: system-ui;
-  background: #f06d06;
-  color: white;
-  text-align: center;
+    font-family: system-ui;
+    background: #f06d06;
+    color: white;
+    text-align: center;
 }
 
 /*
 @font-face {
-  font-family: "summer-blaster";
-    src: url("https://www.chuckecheese.com/wp-content/uploads/fall2024/summer-blaster.woff2") format("woff2"),
-       url("https://www.chuckecheese.com/wp-content/uploads/fall2024/summer-blaster.woff") format("woff");
+font-family: "summer-blaster";
+src: url("https://www.chuckecheese.com/wp-content/uploads/fall2024/summer-blaster.woff2") format("woff2"),
+    url("https://www.chuckecheese.com/wp-content/uploads/fall2024/summer-blaster.woff") format("woff");
 }*/
 
 #top {
-  display: flex;
-  font-family: "summer-blaster", sans-serif;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    font-family: "summer-blaster", sans-serif;
+    align-items: center;
+    justify-content: center;
+}
+
+#content {
+    display: block;
 }
 
 /* Hide the spinner arrows in Chrome, Safari, Edge */
