--- a/styles.css
+++ b/styles.css
@@ -49,3 +49,15 @@ src: url("https://www.chuckecheese.com/wp-content/uploads/fall2024/summer-blaste
         transform: translateY(-10px);
     }
 }
+
+.rainbow-text {
+  animation: colorRotate 2s linear 0s infinite;
+}
+
+@keyframes colorRotate {
+  from { color: #6666ff; }
+  10% { color: #0099ff; }
+  50% { color: #00ff00; }
+  75% { color: #ff3399; }
+  100% { color: #6666ff; }
+}
