--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,18 @@
 body {
     font-family: system-ui;
-    background: #f06d06;
+    /* background: #f06d06;*/
+    background-image: url("assets/orangebackground.jpeg");
+    background-size: cover;
     color: white;
     text-align: center;
 }
 
-/*
 @font-face {
-font-family: "summer-blaster";
-src: url("https://www.chuckecheese.com/wp-content/uploads/fall2024/summer-blaster.woff2") format("woff2"),
-    url("https://www.chuckecheese.com/wp-content/uploads/fall2024/summer-blaster.woff") format("woff");
-}*/
+    font-family: "summer-blaster";
+    src: url("assets/summer-blaster.woff2") format("woff2");
+    /*url("https://www.chuckecheese.com/wp-content/uploads/fall2024/summer-blaster.woff")
+            format("woff");*/
+}
 
 #top {
     display: flex;
@@ -42,7 +44,8 @@ src: url("https://www.chuckecheese.com/wp-content/uploads/fall2024/summer-blaste
 }
 
 @keyframes hover {
-    0%, 100% {
+    0%,
+    100% {
         transform: translateY(10px);
     }
     50% {
@@ -51,13 +54,23 @@ src: url("https://www.chuckecheese.com/wp-content/uploads/fall2024/summer-blaste
 }
 
 .rainbow-text {
-  animation: colorRotate 2s linear 0s infinite;
+    animation: colorRotate 2s linear 0s infinite;
 }
 
 @keyframes colorRotate {
-  from { color: #6666ff; }
-  10% { color: #0099ff; }
-  50% { color: #00ff00; }
-  75% { color: #ff3399; }
-  100% { color: #6666ff; }
+    from {
+        color: #6666ff;
+    }
+    10% {
+        color: #0099ff;
+    }
+    50% {
+        color: #00ff00;
+    }
+    75% {
+        color: #ff3399;
+    }
+    100% {
+        color: #6666ff;
+    }
 }
